front-end/app/styles/_variables.scss
$md-primary: #1E88E5;
$link-color: #15c;
$heading-color: #212121;
$sidenav-color: #fff;
$bg-gray: #f3f6fb;
$border-color: rgba(0, 0, 0, 0.12);
$error: #dd2c00;
$color-admin: #a2134c;
$color-deleted: #949394;
$color-primary: #088CE5;
$color-accent: #9c27b0;
$color-selected-menu: #03A9F4;
$color-selected-icon: #93E8FC;
$color-body: rgba(0, 0, 0, 0.77);
$color-muted: rgba(0, 0, 0, 0.5);
$font-small: 12px;
$font-medium: 14px;
$font-normal: 16px;
$font-large: 26px;
$font-size-15: 15px;
$md-padding: 1rem;
$md-toolbar-height: 4rem; // material design defines this as 64px, overwriting it here using rem untis
$layout-breakpoint-xxs: 370px;
$layout-breakpoint-main-content-margin: 1734px; // the screen width at where the card container starts moving with auto margins
$gray: #808080;
$gray-600-light: #a4a4a4;
$gray-500-light: #cfcfcf;
$selected-gray: #eee;
$gray-400-light: #EAEDF4;
$border-radius: 2px;
$main-fab: #d23f31;
$body-lineheight: 1.6;
$small-lineheight: 1.2;
$lines-two: 2;
$lines-three: 3;
$lines-four: 4;
$hover-background-color: rgba(158, 158, 158, 0.2);
$md-toast-content-max-width: 568px;
$layout-height-sm: 812px;

//ftypography
$heading-color: #212121;

// Long shadow
$pi: 3.14159265359;
$_precision: 10;

// Toolbar Add Material color
$green3: #007884;

// Card
$green1: #00838f;
$green2: #00695c;
$greengrass: #43a047;
$pinky: #9c3a7d;
$violet: #584D78;
$navy: #274156;
$cyan: #00498E;
$salad: #36AA7A;
$royal: #2C47B2;
$gold: #ffff00;
$blue: #006899;
$blue2: #15c; //link colour
$lilac: #6c0099;

// Social
$facebook: #3b5998;
$twitter: #00aeef;
$google: #db4437;

$card-lg-padding: 25px;

$desktop-navbar-height: $md-toolbar-height;

$sidenav-width: 260px;
$nav-button-area-width: 178px;
$button-width: 40px;

$gray-n: rgba(0, 0, 0, .6);
$black: #000;
$white: #fff;
$gray-d: rgba(0, 0, 0, 0.87);

// Scroll button
$mst-button-size: 39px; // Size of circle button
$mst-gutter-right: 37px; // Gap from corner
$mst-gutter-bottom: 55px; // Gap from bottom
$mst-gutter-bottom-high: 120px; // Gap from bottom when logged in

